# video-player

./: build.gradle.kts  settings.gradle.kts
.github/workflows/: gradle.yml
video-player/: build.gradle.kts
video-player-jni/: build.gradle.kts
video-player-jni/src/main/cpp/NativeVideoPlayer/: CMakeLists.txt  CMakeSettings.json  conanfile.py
video-player-jni/src/main/cpp/NativeVideoPlayer/src/: compile_shader.cpp  input.h  interface.cpp  main.cpp  main.h  player.cpp  player.h  render_char.cpp  render_info.cpp  render_list.cpp  render_picture.cpp  render_ui.cpp  render_volume.cpp  shader.cpp  syntactic_sugar.cpp  syntactic_sugar.h
video-player-jni/src/main/cpp/NativeVideoPlayer/src/util/: util.cpp  util.h
video-player-jni/src/main/cpp/NativeVideoPlayer/test/: testGL.cpp
video-player/src/main/kotlin/com/github/wumo/videoplayer/: Clock.kt  FileCallback.kt  NativePlayer.kt
video-player/src/test/kotlin/: PersistentCookieStore.kt  TestNativePlayer.kt  TestNativePlayer2.kt
